# cdtae

./: .gitignore  Cargo.toml
docs/: overview.md
notes/: current.md  implementaion_notes.md  overview.md  v1.md  v2.md
src/: command.rs  env.rs  error.rs  ext.rs  lib.rs  parser.rs  words.rs
