[package]
name = "cdtae"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0"
anyhow = "1.0"
strum = {version = "0.28", features = ["derive"]}
suffixes = "0.4.1"

[lints.rust]
# to remove later
dead_code = "allow"
unused_imports = "allow"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
needless_return = "allow"
